refactor. 불필요한 for문 및 로직 정리